# hyperswitch-python

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  tmp_inspect.py
.devcontainer/: devcontainer.json
orchestrator/: __init__.py
src/: lib.rs
src/hyperswitch_python/: __init__.py
tests/: test_hyperswitch_python.py
